<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ResultadoActivity">



    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/etnombrecliente"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/nombrecliente"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/tvcelular"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/numerodecelular"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/etnombrebarbero"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/nombrebarbero"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/etfechacita"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/fechacita"
            android:textStyle="bold"
            android:textSize="26sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ethoracita"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <TextView
            android:id="@+id/horacita"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="26sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <Button
            android:id="@+id/btnregresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/btncolor"
            android:onClick="regresar"
            android:text="@string/btnregresar" />
    </LinearLayout>


</LinearLayout>